crates/dk-engine-docker/tests/snapshots/parsers__images_list.snap
---
source: crates/dk-engine-docker/tests/parsers.rs
expression: list
---
[
  {
    "id": "sha256:d9e853e87e55526f6b2917df91a2115c36dd7c696a35be12163d44e6e2a4b6bc",
    "repo_tags": [
      "alpine:3.20"
    ],
    "repo_digests": [
      "alpine@sha256:d9e853e87e55526f6b2917df91a2115c36dd7c696a35be12163d44e6e2a4b6bc"
    ],
    "created": "2026-04-16T23:53:26Z",
    "size": 12182311,
    "shared_size": null,
    "containers": 3,
    "labels": {},
    "dangling": false
  }
]
